content new screen grid view styles updated.

--- a/findly-builder/src/app/components/content-source/content-source.component.html
+++ b/findly-builder/src/app/components/content-source/content-source.component.html
@@ -213,6 +213,80 @@
               </div>
             </div>
           </div>
+
+          <!-- <div class="row col-12 p-0 grid-data-sec">
+            <div class="col-4 grid-card">
+              <div class="card_sec">
+                <div class="titles-sec">
+                  <span class="name">Citi Bank</span><span class="type-data">WEB</span>
+                </div>
+                <div class="row col-12 p-0 m-0 align-items-center justify-content-between">
+                  <div class="timestamp">Started - 3 minutes back</div>
+                  <div class="status text-right">
+                    <span class="img-block"><img src="assets/icons/content/failed-status.svg"></span>
+                    <span class="status-title failed">Failed</span>
+                  </div>
+                </div>
+                <div class="delete-refresh">
+                  <img src="assets/icons/content/return.svg">
+                  <img src="assets/icons/content/delete.svg">
+                </div>
+              </div>
+            </div>
+            <div class="col-4 grid-card">
+              <div class="card_sec">
+                <div class="titles-sec">
+                  <span class="name">Finshots</span><span class="type-data doc">DOC</span>
+                </div>
+                <div class="row col-12 p-0 m-0 align-items-center justify-content-between">
+                  <div class="timestamp">Last Updated on 28 Jul 2020</div>
+                  <div class="pages-count text-right">
+                    <span class="count">18</span>Pages
+                  </div>
+                </div>
+                <div class="delete-refresh">
+                  <img src="assets/icons/content/return.svg">
+                  <img src="assets/icons/content/delete.svg">
+                </div>
+              </div>
+            </div>
+            <div class="col-4 grid-card">
+              <div class="card_sec">
+                <div class="titles-sec">
+                  <span class="name">Kore</span><span class="type-data">Web</span>
+                </div>
+                <div class="row col-12 p-0 m-0 align-items-center justify-content-between">
+                  <div class="timestamp">Last Updated on 28 Jul 2020</div>
+                  <div class="pages-count text-right">
+                    <span class="count">12</span>Pages
+                  </div>
+                </div>
+                <div class="delete-refresh">
+                  <img src="assets/icons/content/return.svg">
+                  <img src="assets/icons/content/delete.svg">
+                </div>
+              </div>
+            </div>
+            <div class="col-4 grid-card">
+              <div class="card_sec">
+                <div class="titles-sec">
+                  <span class="name">Kore</span><span class="type-data">DOC</span>
+                </div>
+                <div class="row col-12 p-0 m-0 align-items-center justify-content-between">
+                  <div class="timestamp">Started - 3 minutes back</div>
+                  <div class="status text-right">
+                    <span class="img-block"><img src="assets/icons/content/in-progress.svg"></span>
+                    <span class="status-title">In-progress</span>
+                  </div>
+                </div>
+                <div class="delete-refresh">
+                  <img src="assets/icons/content/return.svg">
+                  <img src="assets/icons/content/delete.svg">
+                </div>
+              </div>
+            </div>                                            
+          </div> -->
+
         </perfect-scrollbar>
       </ng-container>
     </div>
