--- a/findly-builder/src/app/components/credentials-list/credentials-list.component.html
+++ b/findly-builder/src/app/components/credentials-list/credentials-list.component.html
@@ -25,16 +25,16 @@
                 <div class="col-3 title">{{data.appUsage}}</div>
                 <div class="col-3 title">{{data.lastModifiedOn | dateFormatPipe: 'MM-DD-YYYY hh:mm A'}}</div>
                 <div class="col-3 title">
-                    <span class="">{{data.lastModifiedBy.firstName}}</span>
+                    <span class="">{{data.lastModifiedBy.firstName + ' ' + data.lastModifiedBy.lastName}}</span>
                     <span class="float-right action-links">
-                        <span class="actions-links mr-3" ngbTooltip='Edit' [container]='"body"' (click)="editnewCredential($event)"><img class="action_icon" src="assets/images/edit-pencil.svg"></span>
-                        <span class="actions-links" ngbTooltip='Delete' [container]='"body"'><img class="action_icon" src="assets/icons/delete-table.svg"></span>
+                        <span class="actions-links mr-3" ngbTooltip='Edit' [container]='"body"' (click)="editnewCredential(event)"><img class="action_icon" src="assets/images/edit-pencil.svg"></span>
+                        <span class="actions-links" ngbTooltip='Delete' [container]='"body"' (click)="deleteCredential()"><img class="action_icon" src="assets/icons/delete-table.svg"></span>
                     </span>
                 </div>
             </div>
         </div>
     </perfect-scrollbar>   
-    <kr-modal modalType="center" #addCredential modalClass="modal_popups_ view-query-modal">
+    <kr-modal modalType="center" #addCredential modalClass="modal_popups_ view-query-modal"> 
         <div class="modal-header">
             <span> Add Credential</span>
             <div class="close_icon" (click)="closeModalPopup()"><img src="assets/icons/modal-close.svg"></div>
@@ -43,6 +43,7 @@
         <div class="modal-body">
             <div class="kr-sg-input-text mb-4">
                 <div class="label-text">Credential Name</div>
+            
                 <input type="text" autocomplete="off" name="credname" placeholder="Enter Name" [(ngModel)]="credntial.name"
                     class="input-text">
             </div>
@@ -91,7 +92,7 @@
         <div class="modal-body">
             <div class="kr-sg-input-text mb-4">
                 <div class="label-text">Credential Name</div>
-                <input type="text" autocomplete="off" name="credname" placeholder="Enter Name" [(ngModel)]="credntial.name"
+                <input type="text" autocomplete="off" name="credname" placeholder="Enter Name" [(ngModel)]="editCreden.name"
                     class="input-text">
             </div>
             <div class="kr-sg-checkbox d-block p-0">
@@ -126,8 +127,8 @@
         </div>
         <!-- </perfect-scrollbar> -->
         <div class="modal-footer">
-            <button class="kr-sg-button-primary btn_lg" >Save</button>
-            <button class="kr-sg-button-secondary btn_lg" (click)="closeModalPopup()">Cancel</button>
+            <button class="kr-sg-button-primary btn_lg"(click)="createCredential()" >Save</button>
+            <button class="kr-sg-button-secondary btn_lg" (click)="closeEditModalPopup()">Cancel</button>
         </div>
     </kr-modal> 
 </div>
