--- a/findly-builder/src/app/components/settings/settings.component.html
+++ b/findly-builder/src/app/components/settings/settings.component.html
@@ -460,7 +460,7 @@
                 </ul>
             </div>
         </div>
-        <div class="switch-push-check">
+        <div class="switch-toggle-mt4">
             <label class="kr-sg-toggle">
                 <input type="checkbox" [(ngModel)]="credntial.enabled">
                 <div class="slider"><span class="enabled">Push Notifications Enabled</span><span class="disabled">Push
